<resources>
    <string name="app_name">NumbersPuzzle</string>
    <string name="action_settings">Settings</string>

    <string name="title_label">NUMBERS PUZZLE</string>
    <string name="game_four_easy_label">4x4 NORMAL</string>
    <string name="game_four_hard_label">4x4 HARD</string>
    <string name="game_five_easy_label">5x5 NORMAL</string>
    <string name="game_five_hard_label">5x5 HARD</string>
    <string name="game_six_easy_label">6x6 NORMAL</string>
    <string name="game_six_hard_label">6x6 HARD</string>
    <string name="result_label">RESULT</string>
    <string name="how_to_play_label">HOW TO PLAY</string>

    <string name="numbers_puzzle_title">数字パズル</string>
    <string name="start_button_text">スタート</string>
    <string name="how_to_play_text">遊び方</string>

    <string name="select_radio_game">数字の数を選択</string>
    <string name="select_radio_diff">難易度を選択</string>

    <string name="game_four">4x4</string>
    <string name="game_five">5x5</string>
    <string name="game_six">6x6</string>

    <string name="easy">NORMAL</string>
    <string name="hard">HARD</string>

    <string name="game_result">ミス</string>
    <string name="time_result">タイム</string>
    <string name="dialog_title">結果</string>
    <string name="dialog_massage">結果の内容：ミスの数など</string>

    <string name="result_title">結果発表</string>
    <string name="return_button_text">タイトルへ戻る</string>
    <string name="total_game_count_text_before">あなたはこれまでに合計</string>
    <string name="total_game_count_text_after">回暇をつぶしました</string>

    <string name="how_to_play_content">
        数字を１から順にタップするだけ！\n\n全ての数字を消したらゲームクリア！！\n\n\n
        HARDモードでは一定の時間で数字が見えなくなるので、全ての位置を覚えてね
    </string>

    <string name="timer_count_down">残り</string>
    <string name="time">TIME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>