<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.kyomurin.android.numberspuzzle.TitleFragment"
        android:label="@string/title_label"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titleFragment_to_easyFiveFragment"
            app:destination="@id/easyFiveFragment" />
        <action
            android:id="@+id/action_titleFragment_to_howToPlayFragment"
            app:destination="@id/howToPlayFragment" />
        <action
            android:id="@+id/action_titleFragment_to_hardFiveFragment"
            app:destination="@id/hardFiveFragment" />
    </fragment>
    <fragment
        android:id="@+id/easyFiveFragment"
        android:name="com.kyomurin.android.numberspuzzle.EasyFiveFragment"
        android:label="@string/game_five_easy_label"
        tools:layout="@layout/fragment_easy_five" >
        <action
            android:id="@+id/action_easyFiveFragment_to_resultFragment"
            app:destination="@id/resultFragment"
            app:popUpTo="@id/easyFiveFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.kyomurin.android.numberspuzzle.ResultFragment"
        android:label="@string/result_label"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_resultFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/howToPlayFragment"
        android:name="com.kyomurin.android.numberspuzzle.HowToPlayFragment"
        android:label="@string/how_to_play_label"
        tools:layout="@layout/fragment_how_to_play" />
    <fragment
        android:id="@+id/hardFiveFragment"
        android:name="com.kyomurin.android.numberspuzzle.HardFiveFragment"
        android:label="@string/game_five_hard_label"
        tools:layout="@layout/fragment_hard_five" >
        <action
            android:id="@+id/action_hardFiveFragment_to_resultFragment"
            app:destination="@id/resultFragment"
            app:popUpTo="@id/hardFiveFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>